small abstract sections with results

--- a/RandomForestModel.ipynb
+++ b/RandomForestModel.ipynb
@@ -12,6 +12,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Abstract\n",
+    "\n",
+    "| Using SMOTE | Using KFold Cross Validation |\n",
+    "|-----------------|-----------------|\n",
+    "| Accuracy : 0.64 | Accuracy: 0.67|\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Imports"
    ]
   },
