added abstract with results

--- a/XGBoostModel.ipynb
+++ b/XGBoostModel.ipynb
@@ -14,6 +14,20 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Abstract\n",
+    "\n",
+    "| Original Dataset | SMOTE          | Random Under-Sampling | KFold Cross Validation |\n",
+    "|-----------------------|----------------------|---------------|------------------------------|\n",
+    "| Accuracy : 0.6552     | Accuracy : 0.5930    | Accuracy: 0.4337            | Accuracy : 0.6567            |"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fe111af78b83dd2e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Import Libraries"
    ],
    "metadata": {
