Update RandomForestModel with best hyperparameters

--- a/RandomForestModel.ipynb
+++ b/RandomForestModel.ipynb
@@ -372,7 +372,8 @@
     "    y_train_val, y_test = labels[train_indices], labels[test_indices]\n",
     "\n",
     "    # Train the model with best hyperparameters on the entire training + validation set\n",
-    "    best_rf_clf = RandomForestClassifier(**best_params, random_state=42)\n",
+    "    # best_rf_clf = RandomForestClassifier(**best_params, random_state=42) # Use the best hyperparameters found if grid search was used\n",
+    "    best_rf_clf = RandomForestClassifier(max_depth= None, min_samples_leaf=1, min_samples_split=2, n_estimators=200, random_state=42)\n",
     "    best_rf_clf.fit(X_train_val, y_train_val)\n",
     "\n",
     "    # Evaluate model on the test set\n",
