Update accuracy table in RandomForestModel.ipynb

--- a/RandomForestModel.ipynb
+++ b/RandomForestModel.ipynb
@@ -14,11 +14,9 @@
    "source": [
     "# Abstract\n",
     "\n",
-    "| Original Dataset | SMOTE | Random Under-Sampling (RUS) | KFold Cross Validation |\n",
-    "|-----------------|-----------------|-----------------|-----------------|\n",
-    " Accuracy : 0.6655 | Accuracy : 0.6434 | Accuracy: 0.4331| Accuracy: 0.6690|\n",
-    "\n",
-    "\n"
+    "| Original Dataset | SMOTE          | Random Under-Sampling (RUS) | KFold Cross Validation |\n",
+    "|-----------------------|----------------------|---------------|------------------------------|\n",
+    "| Accuracy : 0.6655     | Accuracy : 0.6434    | Accuracy: 0.4331            | Accuracy : 0.6690            |\n"
    ]
   },
   {
