--- a/Data_extraction.ipynb
+++ b/Data_extraction.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "279938c4",
+   "metadata": {},
+   "source": [
+    "## Connect to the sqlire database and display all the tables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "5bef1247",
@@ -60,6 +68,14 @@
     "\n",
     "for table in tables:\n",
     "    print(table[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9541afb8",
+   "metadata": {},
+   "source": [
+    "## Get the fire table which contains data needed"
    ]
   },
   {
@@ -389,6 +405,14 @@
    ],
    "source": [
     "fires.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a158c2e",
+   "metadata": {},
+   "source": [
+    "## Select columns that includes information of fire characteristics, location and time"
    ]
   },
   {
@@ -794,6 +818,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b58da939",
+   "metadata": {},
+   "source": [
+    "## Check missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "61501d28",
@@ -832,6 +864,14 @@
    ],
    "source": [
     "fires.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a5af9a",
+   "metadata": {},
+   "source": [
+    "## Drop missing valus since we haave enough data"
    ]
   },
   {
@@ -1222,6 +1262,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "222aefc3",
+   "metadata": {},
+   "source": [
+    "## Saved the extracted data and check the basic information of the saved file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "a4893bfa",
@@ -1359,7 +1407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
