--- a/Data_preprocessing.ipynb
+++ b/Data_preprocessing.ipynb
@@ -908,7 +908,7 @@
    "id": "6f0527d0",
    "metadata": {},
    "source": [
-    "## Data visualization"
+    "## Data visualization (EDA)"
    ]
   },
   {
@@ -1423,6 +1423,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81ae7a0b",
+   "metadata": {},
+   "source": [
+    "### Drop some columns with repeatative information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "018f6160",
@@ -1469,7 +1477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
